--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -893,7 +893,18 @@ div.tooltip-inner-custom {
     box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.2);
 }
 
-.settingsDiv .panel-heading {
+.mitigationsDiv {
+    position: absolute;
+    z-index: 20;
+    top: 1em;
+    right: 10em;
+    overflow: auto;
+    min-width: 15%;
+    background-color: rgba(255, 255, 255, 0.9);
+    box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.2);
+}
+
+.mitigationsDiv .panel-heading {
     cursor: move;
 }
 
